@@ -5,7 +5,7 @@
 
 !  Copyright 2002-2010 AstroFloyd - astrofloyd.org
 !   
-!  This file is part of the libAF package.
+!  This file is part of the libSUFR package.
 !   
 !  This is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published
 !  by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.
@@ -23,11 +23,11 @@
 
 !***********************************************************************************************************************************
 !> Provides functions and routines to ...
-module AF_
+module SUFR_
   implicit none
   save
   
 contains
   
   
-end module AF_
+end module SUFR_
