@@ -3,6 +3,9 @@
   ChangeLog.txt for libSUFR
   
   
+    8: AstroFloyd, 5/10/2010
+      - Renamed libAF to libSUFR internally
+      
     7: AstroFloyd, 5/10/2010
       - Added statistics.f90
       
